# voicetserver

./: .gitattributes  .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  MistralDoc.md  PLAN1-UE.md  PLAN_overlay.md  PLAN_voicet-rust-rewrite.md  PROMPT-Phase2Fixes.md  PROMPT-phase1c-v4.md  PROMPT-phase2.md  PipeLineTiming.md  README.md  TASKS.md  architecture2-UI.md  bench_hf.py  build.rs  debug_hf.py  learnings1.md  learnings2.md  schmidispeech.user.js
.cargo/: config.toml
.claude/: settings.local.json
assets/: icon_active.rgba  icon_paused.rgba  icon_unloaded.rgba  training_sentences.txt
candle-fork/: Cargo.toml
candle-fork/candle-core/src/cuda_backend/: device.rs  error.rs
config/: medical_terms_de.txt
docs/: API.md  ubuntu_dependencies.md  unified_server_migration_plan.md
qwen3-asr-rs/: Cargo.toml  LICENSE  README.md
qwen3-asr-rs/src/: config.rs  decoder.rs  encoder.rs  error.rs  hub.rs  inference.rs  lib.rs  linear.rs  mel.rs  streaming.rs
scripts/: build-linux.sh  generate_mel_filters.py
src/: audio.rs  config.rs  decoder.rs  encoder.rs  hotkey.rs  lora.rs  m1_attention.rs  macros.rs  main.rs  mel.rs  qwen.rs  qwen_streaming.rs  session.rs  settings.rs  settings_window.rs  streaming.rs  tokenizer.rs  tray.rs  words.rs
src - Copy/: adapter.rs  common.rs  decoder.rs  encoder.rs  main.rs  mel.rs  streaming.rs  tokenizer.rs
src/kernels/: m1_attention.cu
target2/: .rustc_info.json
target2/release/: matmul_test.d  voicet.d
tools/: import_pairs.py  install.sh  requirements.txt  train_lora.py  train_lora_qwen.py
