[package]
name = "qwen3-asr"
version = "0.2.3"
edition = "2021"
description = "Local speech-to-text (ASR) in Rust — Qwen3-ASR inference with Metal & CUDA GPU acceleration, batch and streaming transcription"
license = "MIT"
repository = "https://github.com/alan890104/qwen3-asr-rs"
keywords = ["speech-to-text", "asr", "speech-recognition", "transcription", "candle"]
categories = ["multimedia::audio", "science"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE"]
rust-version = "1.75"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal"]
cuda  = ["candle-core/cuda",  "candle-nn/cuda"]
hub   = ["dep:reqwest"]

[dependencies]
# Vendored candle fork (shared with voicetserver — one candle build / CUDA context)
candle-core = { path = "../candle-fork/candle-core" }
candle-nn  = { path = "../candle-fork/candle-nn" }
tokenizers = { version = "0.22", features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
rubato = "0.15"
rustfft = "6"
anyhow = "1"
log = "0.4"
safetensors = "0.4"
thiserror = "2"
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[package.metadata.docs.rs]
no-default-features = true
